ACS-3652: Fixing some missing corner cases, adding tests.